--- a/i18n/zh-cn/docusaurus-plugin-content-docs/current.json
+++ b/i18n/zh-cn/docusaurus-plugin-content-docs/current.json
@@ -14,5 +14,29 @@
   "sidebar.docs.category.高级功能": {
     "message": "高级功能",
     "description": "The label for category 高级功能 in sidebar docs"
+  },
+  "sidebar.docs.category.政策条款": {
+    "message": "政策条款",
+    "description": "The label for category 政策条款 in sidebar docs"
+  },
+  "sidebar.docs.category.VLssu公益服务器": {
+    "message": "VLssu公益服务器",
+    "description": "The label for category VLssu公益服务器 in sidebar docs"
+  },
+  "sidebar.docs.category.服务器地址与摘要": {
+    "message": "服务器地址与摘要",
+    "description": "The label for category 服务器地址与摘要 in sidebar docs"
+  },
+  "sidebar.docs.category.各服文档": {
+    "message": "各服文档",
+    "description": "The label for category 各服文档 in sidebar docs"
+  },
+  "sidebar.docs.category.使用皮肤站注册游玩教程": {
+    "message": "使用皮肤站注册游玩教程",
+    "description": "The label for category 使用皮肤站注册游玩教程 in sidebar docs"
+  },
+  "sidebar.docs.category.如何配置客户端": {
+    "message": "如何配置客户端",
+    "description": "The label for category 如何配置客户端 in sidebar docs"
   }
 }
